# firebolt-native-transport

./: .releaserc.json  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  build.sh  package-lock.json  package.json
.github/: Dockerfile  deps
.github/scripts/: install-deps.sh  mk-release-package.sh
.github/workflows/: ci.yml  release.yml
cmake/: FireboltTransportConfig.cmake.in  project.cmake.in
include/: Accessor.h  Async.h  CommunicationChannel.h  Event.h  FireboltSDK.h  Gateway.h  Logger.h  Properties.h  Transport.h  Transport_NEW.h  TypesPriv.h  WorkerPool.h  config.h  firebolt_config.h  gateway.h  helpers.h  json_engine.h  json_types.h  logger.h  types.h  version.h.in
include/common/: types.h
include/firebolt/: config.h  gateway.h  helpers.h  logger.h
include/gateway/: client.h  common.h  gateway_impl.h  server.h
include/types/: json_types.h  types.h
src/: Accessor.cpp  CMakeLists.txt  Gateway.cpp  Logger.cpp  Transport.cpp  Transport.h  gateway.cpp  helpers.cpp  logger.cpp  transport.cpp  transport.h
src/Accessor/: Accessor.cpp
src/Async/: Async.cpp
src/Event/: Event.cpp
src/Logger/: Logger.cpp
src/Transport/: Transport.cpp
test/: CMakeLists.txt
test/unit/: json_typesTest.cpp  transportTest.cpp
